--- a/myst.yml
+++ b/myst.yml
@@ -11,8 +11,8 @@ project:
     - id: output-pdf
   exports:
     - format: pdf
-      template: plain_latex_book 
-      output: exports/book.pdf
+      template: article_theme
+      output: exports/cv.pdf
       id: output-pdf
   # To autogenerate a Table of Contents, run "myst init --write-toc"
 site:
