--- a/myst.yml
+++ b/myst.yml
@@ -4,8 +4,9 @@ project:
   id: 7204695b-7485-4989-863c-16cf6e4db155
   title: Template
   # description:
-  # keywords: []
-  authors: []
+  keywords: [CV]
+  authors: [Norbert van Veen]
+  abstract: -
   github: 
   downloads:
     - id: output-pdf
