--- a/myst.yml
+++ b/myst.yml
@@ -2,7 +2,7 @@
 version: 1
 project:
   id: 7204695b-7485-4989-863c-16cf6e4db155
-  title: Template
+  title: CV Norbert van Veen
   # description:
   keywords: [CV]
   authors: [Norbert van Veen]
