--- a/myst.yml
+++ b/myst.yml
@@ -12,7 +12,7 @@ project:
     - id: output-pdf
   exports:
     - format: pdf
-      template: arxiv_two_column
+      template: curvenote
       output: exports/cv.pdf
       id: output-pdf
   # To autogenerate a Table of Contents, run "myst init --write-toc"
