--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -50,6 +50,7 @@ jobs:
             inputenc
             lineno
             lipsum
+            mdframed
             natbib
             newfloat
             preprint
