--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -69,6 +69,7 @@ jobs:
             microtype            
             mdframed
             natbib
+            needspace
             nicefrac
             newfloat
             preprint
