--- a/myst.yml
+++ b/myst.yml
@@ -18,4 +18,4 @@ project:
       id: output-pdf
   # To autogenerate a Table of Contents, run "myst init --write-toc"
 site:
-  template: article-theme
+  template: book-theme
