--- a/myst.yml
+++ b/myst.yml
@@ -7,8 +7,9 @@ project:
   keywords: [CV]
   authors: [Norbert van Veen]
   date: 2025-05-27
-
-  github: 
+  abstract: CV t.b.v. sollicitatie functie Leiden University...
+  
+  github: https://github.com/NorbertvanVeen/CurriculumVitae
   downloads:
     - id: output-pdf
   exports:
